--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,4 +8,5 @@ install:
   - cinst dub
 build_script:
   - dub test --arch=x86
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat" amd64
   - dub test --arch=x86_64
