--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,7 @@
+environment:
+  - APPVEYOR_RDP_PASSWORD=e7PMuDLuA6
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 install:
   # cinst dmd --version=2.071.0
   - ps: Start-FileDownload 'http://downloads.dlang.org/releases/2.x/2.073.1/dmd.2.073.1.windows.7z' -FileName 'dmd2.7z'
@@ -11,3 +15,5 @@ build_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat" x86
   - set DFLAGS=-m32mscoff
   - dub test --arch=x86
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
