--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  - APPVEYOR_RDP_PASSWORD=e7PMuDLuA6
+  - APPVEYOR_RDP_PASSWORD: e7PMuDLuA6
 init:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 install:
