.github/workflows/test.yml: Use DMD 2.097 for macos-10.15
The TLS fix was merged in 2.087.1, but for some reason 2.087.1 still
fails with the same problem. 2.088.0 works, but everything crashes
when an exception (to be caught later) is thrown.

The current latest version (2.097.0) does seem to work, so just use
that, as there isn't really a point in trying to find a minimal
working version considering all the headache surrounding this
questionable platform.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,9 @@ jobs:
         - os: windows-2019
           dc: dmd-2.082.1
           arch: x86
-        # macos-10.15 needs DMD 2.087.1 or later:
-        # https://github.com/dlang/druntime/commit/d4ff1c448d78dca14775571033fc7e583f904aa0
+        # 2.082.1 doesn't work in macos-10.15 needs DMD 2.087.1 or later:.
         - os: macos-10.15
-          dc: dmd-2.088.0
+          dc: dmd-2.097.0
           arch: x86_64
     runs-on: ${{ matrix.os }}
     steps:
