--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,18 +4,18 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ ubuntu-20.04, windows-2019 ]
-        dc: [ dmd-2.082.1 ]
+        os: [ ubuntu-20.04, windows-2019, macos-10.15 ]
+        dc: [ dmd-2.097.0 ]
         arch: [ x86_64 ]
         include:
+        # also test an older DMD verrsion
+        - os: ubuntu-20.04
+          dc: dmd-2.082.1
+          arch: x86_64
         # also test x86 (but only on Windows)
         - os: windows-2019
-          dc: dmd-2.082.1
-          arch: x86
-        # 2.082.1 doesn't work in macos-10.15 needs DMD 2.087.1 or later:.
-        - os: macos-10.15
           dc: dmd-2.097.0
-          arch: x86_64
+          arch: x86
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
