--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ on: [ push, pull_request ]
 
 jobs:
   test:
+    timeout-minutes: 5
     strategy:
       matrix:
         os: [ ubuntu-20.04, windows-2019, macos-12 ]
@@ -40,6 +41,7 @@ jobs:
         run: dub test --arch=${{ matrix.arch }} :windows
 
   compilation-test:
+    timeout-minutes: 5
     strategy:
       matrix:
         os: [ ubuntu-20.04 ]
