--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-20.04, windows-2022, macos-12 ]
-        dc: [ dmd-2.100.0 ]
+        dc: [ dmd-2.100.0, ldc-1.32.2 ]
         arch: [ x86_64 ]
         include:
         # also test an older DMD verrsion
@@ -16,8 +16,13 @@ jobs:
           arch: x86_64
         # also test 32-bit (but only on Windows)
         - os: windows-2022
-          dc: dmd-2.100.0
+          dc: ldc-1.32.2
           arch: x86_mscoff # not x86 to avoid OPTLINK deadlock bugs
+        exclude:
+        # Do not try to use DMD on Windows
+        # https://issues.dlang.org/show_bug.cgi?id=22044
+        - os: windows-2022
+          dc: dmd-2.100.0
 
     runs-on: ${{ matrix.os }}
     steps:
