--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,14 +29,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install D compiler
-        uses: dlang-community/setup-dlang@1ccbc70a0eff7f264857b53c562aa45fd7f1e479
+        uses: dlang-community/setup-dlang@934047eba531212a2c77e7c1b5999d32c2becb81
         with:
           compiler: ${{ matrix.dc }}
 
+      # https://github.com/dlang-community/setup-dlang/issues/85
       - name: Set up PATH on Windows/x86 for LDC libcurl.dll
         if: ${{ matrix.os == 'windows-2022' && matrix.dc == 'ldc-1.32.2' && matrix.arch == 'x86_mscoff' }}
         run: |
-          echo "C:\hostedtoolcache\windows\dc\ldc2-1.32.2\x64\ldc2-1.32.2-windows-multilib\lib32" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "C:\hostedtoolcache\windows\ldc2\1.32.2\x64\ldc2-1.32.2-windows-multilib\lib32" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - run: dub test --debug=ae_unittest --arch=${{ matrix.arch }}
 
@@ -62,7 +63,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install D compiler
-        uses: dlang-community/setup-dlang@1ccbc70a0eff7f264857b53c562aa45fd7f1e479
+        uses: dlang-community/setup-dlang@934047eba531212a2c77e7c1b5999d32c2becb81
         with:
           compiler: ${{ matrix.dc }}
 
