--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ jobs:
   test:
     timeout-minutes: 5
     strategy:
+      fail-fast: false
       matrix:
         os: [ ubuntu-20.04, windows-2022, macos-13 ]
         dc: [ dmd-2.100.0, ldc-1.32.2 ]
