--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@
 /demo/binview/ae-demo-binview
 /demo/canvas/ae-demo-canvas
 /demo/colorcube/ae-demo-colorcube
+/demo/debug_data_leak/ae-demo-debug-data-leak
 /demo/debug_fd_leak/ae-demo-debug-fd-leak
 /demo/debug_shutdown/ae-demo-debug-shutdown
 /demo/drawsprite/ae-demo-drawsprite
